@@ -4,7 +4,7 @@
 # This file is distributed under the same license as the dos2unix package.
 
 prefix=c:/djgpp
-ENABLE_NLS=
+ENABLE_NLS=1
 
 ifdef ENABLE_NLS
 LDFLAGS_EXTRA = -lintl -liconv
@@ -12,10 +12,10 @@ endif
 ZIPOBJ_EXTRA = bin/cwsdpmi.exe
 
 all:
-	$(MAKE) all EXE=.exe ENABLE_NLS=$(ENABLE_NLS) LDFLAGS_EXTRA="$(LDFLAGS_EXTRA)" prefix=$(prefix) LINK="cp -f"
+	$(MAKE) all EXE=.exe ENABLE_NLS=$(ENABLE_NLS) LDFLAGS_EXTRA="$(LDFLAGS_EXTRA)" prefix=$(prefix) LINK_MAN="cp -f"
 
 install:
-	$(MAKE) install EXE=.exe ENABLE_NLS=$(ENABLE_NLS) LDFLAGS_EXTRA="$(LDFLAGS_EXTRA)" prefix=$(prefix) LINK="cp -f"
+	$(MAKE) install EXE=.exe ENABLE_NLS=$(ENABLE_NLS) LDFLAGS_EXTRA="$(LDFLAGS_EXTRA)" prefix=$(prefix) LINK_MAN="cp -f"
 
 uninstall:
 	$(MAKE) uninstall EXE=.exe prefix=$(prefix)
@@ -27,5 +27,5 @@ dist:
 	$(MAKE) dist-zip EXE=.exe prefix=$(prefix) VERSIONSUFFIX="-dos32" ZIPOBJ_EXTRA="${ZIPOBJ_EXTRA}" ENABLE_NLS=$(ENABLE_NLS)
 
 strip:
-	$(MAKE) strip LINK="cp -f" EXE=.exe
+	$(MAKE) strip LINK_MAN="cp -f" EXE=.exe
 
